# BetterSpades

./: .gitignore  CMakeLists.txt
src/: hud.c  player.c
